# dfd-service

./: .gitignore  README.md  evaluate.py  preprocess.py  pyproject.toml  requirements.txt  train.py  train_encoders.py  verify_model_init.py
components/lab/configs/: evaluation.yaml  training.yaml
components/lab/docs/: models.md
components/lab/scripts/: view_shards.py
components/lab/src/data/: shard_dataset.py  shard_writer.py
components/lab/src/main/: evaluate.py  train_encoders.py
components/lab/src/training/: encoder_lightning_module.py  lightning_module.py  metrics.py
components/service/configs/: service.yaml
components/service/configs/data/: dfd_service.db
components/service/src/auth/: jwt.py  router.py
components/service/src/db/: models.py  session.py
components/service/src/inference/: video_analyzer.py
configs/: encoder_training.yaml  eval_avff_aac96k.yaml  eval_avff_aac96k_fakeavceleb.yaml  eval_avff_base.yaml  eval_avff_base_fakeavceleb.yaml  eval_avff_desync.yaml  eval_avff_desync_fakeavceleb.yaml  eval_avff_jpeg50.yaml  eval_avff_jpeg50_fakeavceleb.yaml  eval_avff_res50.yaml  eval_avff_res50_fakeavceleb.yaml  eval_avff_snr10.yaml  eval_avff_snr10_fakeavceleb.yaml  eval_cnn_aac96k.yaml  eval_cnn_desync.yaml  eval_cnn_jpeg50.yaml  eval_cnn_jpeg50_fakeavceleb.yaml  eval_cnn_lstm.yaml  eval_cnn_res50.yaml  eval_cnn_snr10.yaml  eval_cnn_snr10_fakeavceleb.yaml  eval_xception_aac96k.yaml  eval_xception_base.yaml  eval_xception_desync.yaml  eval_xception_jpeg50.yaml  eval_xception_jpeg50_fakeavceleb.yaml  eval_xception_res50.yaml  eval_xception_snr10.yaml  eval_xception_snr10_fakeavceleb.yaml  evaluation.yaml  preprocessing.yaml  training-aac96k.yaml  training-avff-snr10.yaml  training-cnn-aac96k.yaml  training-cnn-desync.yaml  training-cnn-jpeg50.yaml  training-cnn-res50.yaml  training-cnn-snr10.yaml  training-desync.yaml  training-jpeg50.yaml  (+4 more)
docs/: webdataset.md
scripts/: view_shards.py
src/callbacks/: memory_monitor.py
src/data/: augmentations.py  base_preprocessor.py  deepfake_eval_2024_preprocessor.py  fakeavceleb_preprocessor.py  pretrain_preprocessor.py  shard_dataset.py  shard_writer.py
src/models/: AVFF.py  AVFF_encoder.py  cnn_lstm.py  load_model.py  xception.py
src/training/: lightning_module.py  trainer.py
(+11 files in other folders)
